# pixelsortery

./: .gitignore  Cargo.toml  Makefile  PixelSorter-ClassDiagram.drawio  README.md  Trunk.toml  cpixelsortery.h  index.html  main.c  pixelsortery.desktop  sort_video.sh  sorting-notes.xopp
.github/workflows/: build-release.yml
assets/: Pixelsortery-Chart.afphoto  threshold-bars.kra
images/: triangle-mask.kra
scripts/: mosaik.sh
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
shared_lib/test/: Makefile  main.c
src/: cli.rs  color_helpers.rs  gui.rs  iterator.rs  layers.rs  lib.rs  main.rs  newcli.rs  path_creator.rs  pixel_selector.rs  sorter.rs  sorters.rs  span_sorter.rs  video.rs
src/gui/: components.rs  layers.rs  mod.rs
src/path_creator/: gilbert.rs  mod.rs
src/sorter/: mapsort.rs  random_color.rs
src/sorters/: mapsort.rs  random_color.rs
src/span_sorter/: glitchsort.rs  mapsort.rs  random_color.rs  shellsort.rs
