[package]
name = "pixelsortery"
authors = ["Lxtharia"]
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["file", "image"] }
egui_flex = "0.3.0"
env_logger = "0.11.5"
egui-video = "0.9.0"
ffmpeg-the-third = "3.0.2"
# ffmpeg-the-third = "2.0.1"
image = { version = "0.24.6", features = ["jpeg", "png", "webp"] }
inflections = "1.1.1"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
rfd = "0.14.1"

[patch.crates-io]
egui-video = { git = "https://github.com/Lxtharia/egui-video", rev = "cf519ef2b309" }
# egui-video = { path = "deps/egui-video" }
