[package]
name = "pixelsortery"
authors = ["Lxtharia"]
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"
console_error_panic_hook = "0.1.7"
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["file", "image"] }
egui_flex = "0.1.1"
env_logger = "0.11.5"
image = { version = "0.25.2", features = ["jpeg", "png", "webp"] }
inflections = "1.1.1"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["rt"] }
web-sys = "0.3.87"
web-time = "1.1.0"

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-futures = "0.4.60"
base64 = "0.22.1"

