[package]
name = "pixelsortery"
authors = ["Lxtharia"]
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [] # Not enabling video by default
video = ["dep:ffmpeg-the-third", "dep:egui-video"]

[dependencies]
array-init = "2.1.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["file", "image"] }
egui_flex = "0.3.0"
env_logger = "0.11.5"
egui-video = { version = "0.9.0", optional = true }
ffmpeg-the-third = { version = "4.0.1", optional = true }
image = { version = "0.24.6", features = ["jpeg", "png", "webp"] }
inflections = "1.1.1"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["rt"] }
web-sys = "0.3.87"
web-time = "1.1.0"

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-futures = "0.4.60"
# wasm-bindgen-rayon = "1.2"
base64 = "0.22.1"
[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))']
rustflags = '-Ctarget-feature=+atomics'

[profile.dev]
debug = "line-tables-only"     # Recommended. Everything you need for proper stack traces.

[patch.crates-io]
egui-video = { git = "https://github.com/Lxtharia/egui-video", rev = "741420318475" }
# egui-video = { path = "deps/egui-video" }
